--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>мой сайт 1</title>
+    <style>
+        .s1{
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     hello 1325
+    <img class="s1" src="forest.jpg" alt="">
 </body>
 </html>
