--- a/index.html
+++ b/index.html
@@ -12,25 +12,22 @@
     <div class="nav">
         <div class="nav_button">
             <img src="logo.svg" alt="">
-            <div class="nav_button_text">rre</div>
+            <div class="nav_button_text">sw.ru</div>
         </div>
         <div class="nav_items">
-         <p>Кыргызстан</p>
-         <p><a href="">Города</a>  </p>
+         <p> <a href="" >Кыргызстан</a></p>
+         <p><a href="city.html">Города</a>  </p>
          
-         <p> Достопримечательности</p>
-         <p> Природа </p>
-         <p> Культура</p>
-         <p>Литература</p>
-         <p> Интересные факты</p>
+         <p><a href="">Достопримечательности </a>  </p>
+         <p> <a href="">Природа</a> </p>
+         <p> <a href="">Культура</a></p>
+         <p> <a href="" >Литература</a></p>
+         <p> <a  href="" >Интересные факты</a></p>
          <br></br>
-         <p>Конотеатры</p> 
-         <p>Парки</p>
-         <p>Торговые центры</p>
+         <p> <a href="" >Конотеатры</a></p> 
+         <p> <a href="" >Парки</a></p>
+         <p> <a href="" >Торговые центры</a></p>
          </div>
-         
-
-
          <p></p>
     </div>
     <div class="main">
