--- a/index3.html
+++ b/index3.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+button{
+    width: 200px;
+    height: 100px;
+    font-size: 30px;
+font-family: Arial, Helvetica, sans-serif;
+text-shadow: 5px 3px 10px red;
+}
+body{
+    text-align: center;
+}
+
+</style>    
 </head>
 <body>
     <button onclick="f1()">Красный фон</button>
-    <button onclick="f1()">Черный фон</button>
+  
 </body>
 <script>
     function f1 (){
       document.body.style.backgroundColor= 'red'
     }
-    function f1 (){
-      document.body.style.backgroundColor= 'black'
-    }
+    
+
   </script>
 </html>
