--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-<a href="index1.html">Сайт 1</a>
-<a href="index2.html">Сайт 2</a>
-<a href="index3.html">Сайт 3</a>
-<a href="index4.html">Сайт 4</a>
+<script>
+let elem=document.createElement("div")
+elem.style.width='50px'
+elem.style.height='200px'
+elem.style.backgroundColor="blue"
+document.body.append(elem)
+</script>
+<a href="21oct24.html"> 21 октября 2024 </a>
 </body>
 </html>
