--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-<script>
-let elem=document.createElement("div")
-elem.style.width='50px'
-elem.style.height='200px'
-elem.style.backgroundColor="blue"
-document.body.append(elem)
-</script>
+сайт студентки Абдулбековой Акинай 3319\2
 <a href="21oct24.html"> 21 октября 2024 </a>
+<a href="23oct24.html"> 23 октября 2024 </a>
+<div id="diagram"> </div>
 </body>
+
 </html>
