--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 сайт студентки Абдулбековой Акинай 3319\2
 <a href="21oct24.html"> 21 октября 2024 </a>
 <a href="23oct24.html"> 23 октября 2024 </a>
-<div id="diagram"> </div>
+<a href="24oct24.html"> 24 октобря 2024 </a>
 </body>
 
 </html>
