--- a/25oct24.html
+++ b/25oct24.html
@@ -27,5 +27,6 @@
         
     </script>
     <a href="https://thecode.media/maps/">яндекс карта</a>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A5ad3e89375eb8e07f8b7b5203bc977a0934c2ba1f5b5857bc7e05fc510f20074&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 </body>
 </html>
