--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a href="23oct24.html"> 23 октября 2024 </a>
 <a href="24.10.24.html"> 24 октября 2024</a>
 <a href="25oct24.html"> 25 октября 2024 </a>
-
+<a href="28oct24.html"> 28 октября 2024</a>
 </body>
 
 </html>
