--- a/3319.2 А. А/index.html
+++ b/3319.2 А. А/index.html
@@ -16,7 +16,9 @@
 <a href="30oct24.html"> 30 октября 2024</a>
 <a href="31oct24.html"> 31 октября 2024</a>
 <a href="01nov24.html"> 01 ноября 2024</a>
-
+<a href="02nov24.html"> 02 ноября 2024</a>
+<a href="05nov24.html"> 05 ноября 2024</a>
+<a href="12nov24.html"> 12 ноября 2024</a>
 </body>
 
 </html>
